fixed details view not showing full text (was cut off on the right) fixed 404 errors caused by script references which were not using Assets.at()

--- a/app/assets/stylesheets/styles.less
+++ b/app/assets/stylesheets/styles.less
@@ -173,6 +173,8 @@ article {
     border: 1px solid rgba(0, 0, 0, 0.07);
     margin-right: 20px;
     margin-bottom: 20px;
+    
+    &.details { max-width: none; }
 
     h1 {
       a {
